[package]
name = "avatar-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tiny_http = "0.12.0"

[dev-dependencies]
tempfile = "3.27.0"
